[gd_scene load_steps=8 format=3 uid="uid://c5605c3ehaw25"]

[ext_resource type="Script" path="res://scripts/gui/inventory/slot.gd" id="1_n8mqj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_do0su"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_na6x3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ayq3h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nd3v"]
bg_color = Color(0.239216, 0.321569, 0.6, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.168627, 0.180392, 0.509804, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0
shadow_size = 4
shadow_offset = Vector2(2, 2)

[sub_resource type="Theme" id="Theme_eamnv"]
default_font_size = 50

[sub_resource type="Theme" id="Theme_l6wi2"]
default_font_size = 30

[node name="Slot" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxEmpty_do0su")
script = ExtResource("1_n8mqj")

[node name="SlotPanel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 1
layout_mode = 2
mouse_filter = 2

[node name="ItemContainer" type="PanelContainer" parent="SlotPanel"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_na6x3")

[node name="ItemPanel" type="Panel" parent="SlotPanel/ItemContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ayq3h")

[node name="Item" type="TextureRect" parent="SlotPanel/ItemContainer/ItemPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="Stack" type="Label" parent="SlotPanel"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -91.0
offset_top = -63.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TooltipControl" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 99
z_as_relative = false
layout_mode = 2
mouse_filter = 2

[node name="TooltipContainer" type="PanelContainer" parent="TooltipControl"]
layout_mode = 1
offset_right = 109.0
offset_bottom = 161.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3nd3v")

[node name="VBoxContainer" type="VBoxContainer" parent="TooltipControl/TooltipContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TooltipControl/TooltipContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Title" type="Label" parent="TooltipControl/TooltipContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = SubResource("Theme_eamnv")
text = "Title"

[node name="MarginContainer2" type="MarginContainer" parent="TooltipControl/TooltipContainer/VBoxContainer"]
layout_mode = 2

[node name="Tooltip" type="RichTextLabel" parent="TooltipControl/TooltipContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = SubResource("Theme_l6wi2")
bbcode_enabled = true
text = "Tooltip
"
fit_content = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
